Fixed color ramp import

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -138,6 +138,7 @@ importFrom(RColorBrewer,brewer.pal)
 importFrom(RSpectra,eigs_sym)
 importFrom(Rcpp,evalCpp)
 importFrom(Rcpp,sourceCpp)
+importFrom(circlize,colorRamp2)
 importFrom(circlize,chordDiagram)
 importFrom(circlize,circos.clear)
 importFrom(circlize,circos.text)
